/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// This file contains protocol buffers that are used for RegionServerStatusProtocol.
syntax = "proto2";
package hbase.pb;

option java_package = "org.apache.hadoop.hbase.shaded.protobuf.generated";
option java_outer_classname = "ReplicaRegionHealthProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

import "HBase.proto";

message HMRegionReplicaHealthChangeRequest {
  repeated RegionInfo region_info = 1;
  required bool good_state = 2;
}

message RSRegionReplicaHealthChangeRequest {
  repeated RegionNameMasterProcessingTimePair region_name_processing_time_pair = 1;
}

message RegionNameMasterProcessingTimePair {
  required bytes encoded_region_name = 1;
  required uint64 master_ts = 2; 
}

message RegionReplicaHealthChangeRequest {
   required RegionSpecifier specifier = 1;
   required ServerName requestingServer = 2;
}

message RegionReplicaHealthChangeResponse {

}

message ReplicaStatusResponse {
  required bool status = 1;
}

service ReplicaRegionHealthService {
  rpc HealthChange(HMRegionReplicaHealthChangeRequest)
    returns(RegionReplicaHealthChangeResponse);
  rpc AtleastOneReplicaGood(RegionReplicaHealthChangeRequest)
    returns(ReplicaStatusResponse);
}
